# filter

./: filter.cabal
src/: .#OptTest.hs  Filter.hs  Main.hs
tests/: data.txt  foo.py  foo.s  small.py
