name:                filter
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Library
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , text
                     , directory
                     , regex-compat
                     , filepath
                     , optparse-applicative 

  hs-source-dirs:    src
  Exposed-modules:
     Filter

executable filter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , text
                     , directory
                     , regex-compat
                     , filepath
                     , optparse-applicative
  other-modules: Filter